# stilt-locomotion

./: .gitignore  .gitmodules  CLAUDE.md  FUTURE_WORK.md  STATUS.md  context.txt  pyproject.toml  requirements.txt  stilt-locomotion-notes.txt
.claude/: settings.local.json
assets/mjcf/g1/: g1.xml
assets/mjcf/g1/assets/: stilt.STL
envs/: stilt_env.py
envs/stilt_g1/: __init__.py  curriculums.py  env_cfgs.py  rl_cfg.py  stilt_robot.py
scripts/: play_stilt.py  setup.pbs  setup_remote.sh  sync_checkpoints.sh  train.pbs  train.sh  train_stilt.pbs  train_stilt.py  train_stilt.sh  view_model.command  visualise.command  watch_training.sh
