[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stilt-locomotion"
version = "0.1.0"
description = "Stilt locomotion research using mjlab / MuJoCo-Warp"
requires-python = ">=3.10"
dependencies = [
    "mjlab>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stilt*"]

[tool.uv.sources]
mjlab = { path = "mjlab", editable = true }
